--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
-    <groupId>com.redeSocial</groupId>
-    <artifactId>rede-social</artifactId>
+
+    <groupId>com.socialhub</groupId>
+    <artifactId>socialhub</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    
-    <name>Rede Social</name>
-    
+
+    <properties>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+    </properties>
+
     <dependencies>
-        <!-- Dependências para o projeto, como Spring, etc. -->
+        <!-- Add Spring dependencies here if needed later -->
     </dependencies>
 
     <build>
         <plugins>
-            <!-- Plugins de build, como o maven-compiler-plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
